# AutoFeedback

./: .buildinfo  .coverage  .gitattributes  .github-ci.yml  .gitlab-ci.yml  RANDOM_VARIABLES.md  README.rst  funcchecks.py  function_error_messages.py  genindex.html  index.html  main.py  min_versions.html  objects.inv  optional_requirements.txt  plot_error_messages.py  plotchecks.py  plotclass.py  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  testfuncs.py  testvars.py  usage.html  varchecks.py
.github/workflows/: build_docs.yml  build_test.yml  deploy_pages.yml  install.yml  python-publish.yml
AutoFeedback/: __init__.py  _version.py  funcchecks.py  function_error_messages.py  plot_error_messages.py  plotchecks.py  plotclass.py  randomclass.py  utils.py  varchecks.py  variable_error_messages.py
_modules/: AutoFeedback.html  index.html
_modules/AutoFeedback/: _version.html  bcolors.html  funcchecks.html  function_error_messages.html  plot_error_messages.html  plotchecks.html  plotclass.html  randomclass.html  utils.html  varchecks.html  variable_error_messages.html
_sources/: index.rst.txt  usage.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/AutoFeedback/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/AutoFeedback/: index.html
autoapi/AutoFeedback/_version/: index.html
autoapi/AutoFeedback/bcolors/: index.html
autoapi/AutoFeedback/funcchecks/: index.html
autoapi/AutoFeedback/function_error_messages/: index.html
docs/: Makefile
docs/source/: conf.py  index.rst  usage.rst
test/: testerrors.py  testfuncs.py  testrandomclass.py  testsymp.py  testvars.py
(+18 files in other folders)
